<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sasha.finalsoftware.NamesListedActivity">

<!-- attempting to do swipe motion
    <com.yuyakaido.android.cardstackview.CardStackView
        android:id="@+id/card_stack_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:clipToPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    />-->


    <TextView
        android:id="@+id/genderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="Gender"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/genderLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameView" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/namePopGraph"
        android:layout_width="300dip"
        android:layout_height="300dip"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@id/dislikeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popularityLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:fontFamily="serif-monospace"
        android:text="@string/nameLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="120dp"
        android:fontFamily="serif-monospace"
        android:text="@string/genderLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popularityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="192dp"
        android:fontFamily="serif-monospace"
        android:text="@string/popularityLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:fontFamily="serif-monospace"
        android:text="Name"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_like"
        android:onClick="likeClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dislikeButton" />

    <Button
        android:id="@+id/dislikeButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_dislike"
        android:onClick="dislikeClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label1880"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:background="#00FFFFFF"
        android:text="@string/label1880"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namePopGraph" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/label2020"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namePopGraph" />

</android.support.constraint.ConstraintLayout>